# Genrative-AI

./: README.md  pyproject.toml
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _operator.data.json  _operator.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  _winapi.data.json  _winapi.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  (+216 more)
.mypy_cache/3.12/IPython/: __init__.data.json  __init__.meta.json  display.data.json  display.meta.json  paths.data.json  paths.meta.json
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  wsgi.data.json  wsgi.meta.json  xml.data.json  xml.meta.json
.mypy_cache/3.12/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/anyio/: __init__.data.json  __init__.meta.json  from_thread.data.json  from_thread.meta.json  lowlevel.data.json  lowlevel.meta.json  to_thread.data.json  to_thread.meta.json
genrative_ai/: main.py  prctice.ipynb  python.py
tests/: test_main.py
(+1796 files in other folders)
