[tool.poetry]
name = "genrative-ai"
version = "0.1.0"
description = ""
authors = ["Aamirshazad <amiralicomsats3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pandas = "^2.2.1"
mp = "^0.5.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
langchain = "^0.1.13"
django = "^5.0.3"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"
openai = "^1.14.2"
google-generativeai = "^0.4.1"
fastapi = {extras = ["all"], version = "^0.110.1"}
seaborn = "^0.13.2"
plotly = "^5.20.0"
scikit-learn = "^1.4.1.post1"
install = "^1.3.5"
tensorflow = "^2.16.1"
beautifulsoup4 = "^4.12.3"
langserve = {extras = ["all"], version = "^0.0.51"}
langchain-cli = "^0.0.21"
pip = "^24.0"
langsmith = "^0.1.31"
langchain-core = "^0.1.33"
langchain-community = "^0.0.29"
langchain-openai = "^0.1.1"
faiss-cpu = "^1.8.0"
streamlit = "^1.32.2"
huggingface-hub = {extras = ["cli", "torch"], version = "^0.21.4"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
